fix scrolling on iphone

--- a/app/modules/shell/styles/navbar.styl
+++ b/app/modules/shell/styles/navbar.styl
@@ -36,7 +36,6 @@ ul.navbar-nav > li > a
     width 100%
     height 'calc(100% - %s)' % navbar-height
     bottom navbar-height
-    -webkit-overflow-scrolling touch
 
   @media (min-width: screen-sm-min)
     position relative
