--- a/app/modules/shell/styles/shell.styl
+++ b/app/modules/shell/styles/shell.styl
@@ -4,6 +4,7 @@
 body,
 html
   height 100%
+  -webkit-overflow-scrolling touch
 
 body
   background-position 50% 50%
